send images to browser, gallery actually works
