# backend/generated/restapi/gaollery/images/get_image_by_id_responses.go
@@ -57,48 +57,3 @@ func (o *GetImageByIDOK) WriteResponse(rw http.ResponseWriter, producer runtime.
 		}
 	}
 }
-
-// GetImageByIDInternalServerErrorCode is the HTTP code returned for type GetImageByIDInternalServerError
-const GetImageByIDInternalServerErrorCode int = 500
-
-/*
-GetImageByIDInternalServerError Internal Server Error
-
-swagger:response getImageByIdInternalServerError
-*/
-type GetImageByIDInternalServerError struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ProblemDetails `json:"body,omitempty"`
-}
-
-// NewGetImageByIDInternalServerError creates GetImageByIDInternalServerError with default headers values
-func NewGetImageByIDInternalServerError() *GetImageByIDInternalServerError {
-
-	return &GetImageByIDInternalServerError{}
-}
-
-// WithPayload adds the payload to the get image by Id internal server error response
-func (o *GetImageByIDInternalServerError) WithPayload(payload *models.ProblemDetails) *GetImageByIDInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get image by Id internal server error response
-func (o *GetImageByIDInternalServerError) SetPayload(payload *models.ProblemDetails) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetImageByIDInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(500)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
