# backend/pkg/handlers/images/handler.go
@@ -9,17 +9,20 @@ import (
 	"github.com/Richard87/goallery/internal/pointers"
 	"github.com/Richard87/goallery/pkg/inmemorydb"
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/rs/zerolog"
 )
 
 type Handler struct {
-	db *inmemorydb.InMemoryDb
+	db     *inmemorydb.InMemoryDb
+	logger zerolog.Logger
 }
 
 var _ restapi.ImagesAPI = (*Handler)(nil)
 
-func New(db *inmemorydb.InMemoryDb) *Handler {
+func New(db *inmemorydb.InMemoryDb, logger zerolog.Logger) *Handler {
 	return &Handler{
-		db: db,
+		db:     db,
+		logger: logger.With().Str("pkg", "images").Logger(),
 	}
 }
 
@@ -49,5 +52,18 @@ func (h *Handler) GetImages(ctx context.Context, params images.GetImagesParams) 
 	}
 
 	return images.NewGetImagesOK().WithPayload(list)
+}
 
+func (h *Handler) DownloadImageByID(ctx context.Context, params images.DownloadImageByIDParams) middleware.Responder {
+	f, err := h.db.OpenImage(params.ID)
+	if err != nil {
+		h.logger.Error().Err(err).Msg("failed to list images")
+		images.NewGetImagesInternalServerError().WithPayload(&models.ProblemDetails{
+			Detail: err.Error(),
+			Status: pointers.Int32(500),
+			Title:  pointers.String("Internal Server Error"),
+		})
+	}
+
+	return images.NewDownloadImageByIDOK().WithPayload(f)
 }
